Adds ctags settings Adds vim plugins Changes tmux layout

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ bind C-Space copy-mode
 
 # Activity Monitoring
 setw -g monitor-activity off
-set -g visual-activity off
+setw -g visual-activity off
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
@@ -40,6 +40,11 @@ bind = select-layout tiled
 # unbind C-a
 # unbind o # this is the default key for cycling panes
 # bind ^A select-pane -t:.+
+#
+
+set -g status-keys vi
+
+setw -g mode-keys vi
 
 # make window/pane index start with 1
 set -g base-index 1
@@ -136,8 +141,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @continuum-restore 'on'
 # Other examples:
@@ -149,11 +154,26 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
+set-option -g allow-rename off
 
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
+# set-option -g pane-active-border-fg blue
 
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
 bind -n WheelDownPane select-pane -t= \; send-keys -M 
 
+
+# show host name and IP address on left side of status bar
+set -g status-left-length 70
+set -g status-left "#[fg=green]#S #I:#P  "
+
+# show session name, window & pane number, date and time on right side of
+# status bar
+set -g status-right-length 160
+set -g status-right "#[fg=blue]#h #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-run-shell ~/.tmux/plugins/tmux-sidebar/sidebar.tmux
+# run-shell ~/.tmux/plugins/tmux-sidebar/sidebar.tmux
