--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -144,6 +144,12 @@ set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+
+set -g @plugin 'NHDaly/tmux-scroll-copy-mode'
+set -g @scroll-down-exit-copy-mode "on"
+set -g @scroll-in-moused-over-pane "on"
+set -g @scroll-without-changing-pane "on"
+
 set -g @continuum-restore 'on'
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
