--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -128,10 +128,10 @@ source ~/dotfiles/tmux/theme.sh
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-H if-shell "$is_vim" "send-keys C-H" "select-pane -L"
+bind -n C-J if-shell "$is_vim" "send-keys C-J" "select-pane -D"
+bind -n C-K if-shell "$is_vim" "send-keys C-K" "select-pane -U"
+bind -n C-L if-shell "$is_vim" "send-keys C-L" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # List of plugins
@@ -167,8 +167,8 @@ set -g window-active-style 'fg=colour250,bg=black'
 
 # set-option -g pane-active-border-fg blue
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
-bind -n WheelDownPane select-pane -t= \; send-keys -M 
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 
 # show host name and IP address on left side of status bar
