adds ahk scripts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,7 @@
-
-
 # tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 # set -g status-utf8 on
-
+set-option -g default-shell /bin/zsh
 set -g history-limit 20000
 
 # automatically renumber tmux windows
@@ -91,13 +89,13 @@ setw -g mouse on
 # set-option -g -q mouse on
 
 bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
-bind-key -t vi-copy PPage page-up
-bind-key -t vi-copy NPage page-down
+# bind-key -t vi-copy PPage page-up
+# bind-key -t vi-copy NPage page-down
 
 bind -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "select-pane -t =; send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "select-pane -t =; send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -t vi-copy WheelUpPane halfpage-up
-bind-key -t vi-copy WheelDownPane halfpage-down
+# bind-key -t vi-copy WheelUpPane halfpage-up
+# bind-key -t vi-copy WheelDownPane halfpage-down
 
 # maximizing and restoring windows
 unbind Up
@@ -112,8 +110,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
@@ -181,5 +179,5 @@ set -g status-right-length 160
 set -g status-right "#[fg=blue]#h #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
 # run-shell ~/.tmux/plugins/tmux-sidebar/sidebar.tmux
