--- a/.terminator.config
+++ b/.terminator.config
@@ -23,5 +23,7 @@
     background_darkness = 0.0
     background_type = transparent
     cursor_color = "#aaaaaa"
+    font = Input Mono Light 10
     palette = "#000000:#aa0000:#00aa00:#aa5500:#0000aa:#aa00aa:#00aaaa:#aaaaaa:#555555:#ff5555:#55ff55:#ffff55:#5555ff:#ff55ff:#55ffff:#ffffff"
     show_titlebar = False
+    use_system_font = False
