--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,7 @@
 # tmux display things in 256 colors
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # set -g status-utf8 on
 set-option -g default-shell /bin/zsh
 set -g history-limit 20000
@@ -11,12 +13,6 @@ set -g renumber-windows on
 unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
-
-# for nested tmux sessions
-bind-key Space send-prefix
-
-bind Space copy-mode
-bind C-Space copy-mode
 
 # Activity Monitoring
 setw -g monitor-activity off
@@ -121,7 +117,7 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 ### Color & Style Settings ###
 ##############################
 
-source ~/dotfiles/tmux/theme.sh
+# source ~/dotfiles/tmux/theme.sh
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -137,13 +133,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# user <prefix> CTRL R/S to reload/save instead
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+set -g @plugin 'mattdavis90/base16-tmux'
 
 set -g @plugin 'NHDaly/tmux-scroll-copy-mode'
+set -g @colors-base16 'material-darker'
 set -g @scroll-down-exit-copy-mode "on"
 set -g @scroll-in-moused-over-pane "on"
 set -g @scroll-without-changing-pane "on"
