--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -110,14 +110,14 @@ bind p paste-buffer
 # bind -t vi-copy 'y' copy-selection
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
 ##############################
 ### Color & Style Settings ###
 ##############################
 
-# source ~/dotfiles/tmux/theme.sh
+source ~/dotfiles/tmux/theme.sh
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -131,10 +131,14 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @plugin 'tmux-plugins/tmux-sensible' 		# A set of tmux options that should be acceptable to everyone.
+set -g @plugin 'tmux-plugins/tmux-resurrect' 		# 
+  set -g @resurrect-strategy-vim 'session'
+  set -g @resurrect-strategy-nvim 'session'
 # user <prefix> CTRL R/S to reload/save instead
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -146,20 +150,19 @@ set -g @scroll-down-exit-copy-mode "on"
 set -g @scroll-in-moused-over-pane "on"
 set -g @scroll-without-changing-pane "on"
 
-set -g @continuum-restore 'on'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# needs reattach-to-user-namespace on osx
+# brew install reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+bind -t vi-copy Enter copy-pipe "pbcopy -i -selection clipboard"
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# for vim
-set -g @resurrect-strategy-vim 'session'
-# for neovim
-set -g @resurrect-strategy-nvim 'session'
 set-option -g allow-rename off
 
-set -g window-style 'fg=colour247,bg=colour233'
-set -g window-active-style 'fg=colour250,bg=black'
 
 # set-option -g pane-active-border-fg blue
 
