--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,8 +27,8 @@ setw -g aggressive-resize on
 set -sg escape-time 0
 
 # tile all windows
-unbind =
-bind = select-layout tiled
+# unbind =
+# bind = select-layout tiled
 
 # cycle through panes
 # unbind C-a
@@ -63,7 +63,7 @@ bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
-bind y setw synchronize-panes
+# bind y setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
@@ -80,11 +80,25 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
+bind-key Escape copy-mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T choice-mode-vi h send-keys -X tree-collapse
+bind-key -T choice-mode-vi l send-keys -X tree-expand
+bind-key -T choice-mode-vi H send-keys -X tree-collapse-all
+bind-key -T choice-mode-vi L send-keys -X tree-expand-all
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe\;clear-selection
+
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy -in -selection clipboard"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy -in -selection clipboard"
+
 # enable mouse support for switching panes/windows
 setw -g mouse on
 # set-option -g -q mouse on
 
-bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+# bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
 # bind-key -t vi-copy PPage page-up
 # bind-key -t vi-copy NPage page-down
 
@@ -98,7 +112,7 @@ unbind Up
 bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
 unbind Down
 bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
-
+bind-key Z resize-pane -Z
 # set vi mode for copy mode
 setw -g mode-keys vi
 # more settings to make copy-mode more vim-like
@@ -133,7 +147,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'tmux-plugins/tmux-sensible' 		# A set of tmux options that should be acceptable to everyone.
-set -g @plugin 'tmux-plugins/tmux-resurrect' 		# 
+set -g @plugin 'tmux-plugins/tmux-resurrect' 		# Saves session
   set -g @resurrect-strategy-vim 'session'
   set -g @resurrect-strategy-nvim 'session'
 # user <prefix> CTRL R/S to reload/save instead
@@ -143,41 +157,27 @@ set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'mattdavis90/base16-tmux'
+  set -g @colors-base16 'material-darker'
 
-set -g @plugin 'NHDaly/tmux-scroll-copy-mode'
-set -g @colors-base16 'material-darker'
-set -g @scroll-down-exit-copy-mode "on"
-set -g @scroll-in-moused-over-pane "on"
-set -g @scroll-without-changing-pane "on"
+set -g @plugin 'NHDaly/tmux-scroll-copy-mode'           # Scroll up enables copy mode
+  set -g @scroll-down-exit-copy-mode "on"
+  set -g @scroll-in-moused-over-pane "on"
+  set -g @scroll-without-changing-pane "on"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
-# needs reattach-to-user-namespace on osx
-# brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+  # needs reattach-to-user-namespace on osx
+  # brew install reattach-to-user-namespace
+  set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-bind -t vi-copy Enter copy-pipe "pbcopy -i -selection clipboard"
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-set-option -g allow-rename off
+set-option -g allow-rename off # prevents renaming window
 
 
 # set-option -g pane-active-border-fg blue
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+# TODO: figure this one out
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-
-# show host name and IP address on left side of status bar
-set -g status-left-length 70
-set -g status-left "#[fg=green]#S #I:#P  "
-
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right-length 160
-set -g status-right "#[fg=blue]#h #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
