--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -172,7 +172,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g allow-rename off # prevents renaming window
 
 
-# set-option -g pane-active-border-fg blue
+set-option -g pane-active-border-fg blue
 
 # TODO: figure this one out
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
