--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,8 +59,8 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind N new-window
 
 # split window and fix path for tmux 1.9
-bind \ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# bind \ split-window -h -c "#{pane_current_path}"
+# bind - split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
 # bind y setw synchronize-panes
@@ -140,7 +140,7 @@ bind -n C-H if-shell "$is_vim" "send-keys C-H" "select-pane -L"
 bind -n C-J if-shell "$is_vim" "send-keys C-J" "select-pane -D"
 bind -n C-K if-shell "$is_vim" "send-keys C-K" "select-pane -U"
 bind -n C-L if-shell "$is_vim" "send-keys C-L" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -164,15 +164,15 @@ set -g @plugin 'NHDaly/tmux-scroll-copy-mode'           # Scroll up enables copy
   set -g @scroll-in-moused-over-pane "on"
   set -g @scroll-without-changing-pane "on"
 
-set -g @plugin 'tmux-plugins/tmux-yank'
-  # needs reattach-to-user-namespace on osx
-  # brew install reattach-to-user-namespace
-  set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set -g @plugin 'tmux-plugins/tmux-yank'
+#   # needs reattach-to-user-namespace on osx
+#   # brew install reattach-to-user-namespace
+#   set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set-option -g allow-rename off # prevents renaming window
 
 
-set-option -g pane-active-border-fg blue
+# set-option -g pane-active-border-fg blue
 
 # TODO: figure this one out
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
