--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,8 +59,8 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind N new-window
 
 # split window and fix path for tmux 1.9
-# bind \ split-window -h -c "#{pane_current_path}"
-# bind - split-window -v -c "#{pane_current_path}"
+ bind-key \\ split-window -h -c "#{pane_current_path}"
+ bind-key - split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
 # bind y setw synchronize-panes
@@ -89,6 +89,37 @@ bind-key -T choice-mode-vi l send-keys -X tree-expand
 bind-key -T choice-mode-vi H send-keys -X tree-collapse-all
 bind-key -T choice-mode-vi L send-keys -X tree-expand-all
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+
+# decide whether we're in a Vim process
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
+
+
+
 # bind-key -T copy-mode-vi y send-keys -X copy-pipe\;clear-selection
 
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy -in -selection clipboard"
@@ -164,12 +195,12 @@ set -g @plugin 'NHDaly/tmux-scroll-copy-mode'           # Scroll up enables copy
   set -g @scroll-in-moused-over-pane "on"
   set -g @scroll-without-changing-pane "on"
 
-# set -g @plugin 'tmux-plugins/tmux-yank'
+ set -g @plugin 'tmux-plugins/tmux-yank'
 #   # needs reattach-to-user-namespace on osx
 #   # brew install reattach-to-user-namespace
 #   set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-set-option -g allow-rename off # prevents renaming window
+# set-option -g allow-rename off # prevents renaming window
 
 
 # set-option -g pane-active-border-fg blue
@@ -180,5 +211,5 @@ set-option -g allow-rename off # prevents renaming window
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# run -b '~/.tmux/plugins/tpm/tpm'
 # run-shell ~/.tmux/plugins/tmux-sidebar/sidebar.tmux
