--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,26 @@
 # tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+# set -as terminal-overrides ',*:Tc'
+
+# Status bar inherits terminal background/foreground
+set -g status-bg default
+set -g status-fg default
+
+# Pane borders inherit terminal colors
+set -g pane-border-bg default
+set -g pane-border-fg default
+set -g pane-active-border-bg default
+set -g pane-active-border-fg default
+
+# Message text inherits terminal colors
+set -g message-style bg=default,fg=default
+set -g message-command-style bg=default,fg=default
+
+# Window status line inherits terminal colors
+set -g window-status-style bg=default,fg=default
+set -g window-status-current-style bg=default,fg=default
 
 # set -g status-utf8 on
 set-option -g default-shell /bin/zsh
@@ -40,8 +60,13 @@ set -sg escape-time 0
 #
 
 set -g status-keys vi
+set -g status-bg default
+set -g status-fg default
+set -g pane-border-bg default
+set -g pane-active-border-bg default
 
 setw -g mode-keys vi
+set -g mode-style bg=default,fg=default
 
 # make window/pane index start with 1
 set -g base-index 1
