--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,14 @@
 # tmux display things in 256 colors
 # set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "tmux-256color"
-# set -as terminal-overrides ',*:Tc'
+set -as terminal-overrides ',*:Tc'
+
 
 # Status bar inherits terminal background/foreground
 set -g status-bg default
 set -g status-fg default
 
-# Pane borders inherit terminal colors
-set -g pane-border-bg default
-set -g pane-border-fg default
-set -g pane-active-border-bg default
-set -g pane-active-border-fg default
 
 # Message text inherits terminal colors
 set -g message-style bg=default,fg=default
@@ -22,7 +18,7 @@ set -g message-command-style bg=default,fg=default
 set -g window-status-style bg=default,fg=default
 set -g window-status-current-style bg=default,fg=default
 
-# set -g status-utf8 on
+set -g status-right-length 100
 set-option -g default-shell /bin/zsh
 set -g history-limit 20000
 
@@ -62,8 +58,6 @@ set -sg escape-time 0
 set -g status-keys vi
 set -g status-bg default
 set -g status-fg default
-set -g pane-border-bg default
-set -g pane-active-border-bg default
 
 setw -g mode-keys vi
 set -g mode-style bg=default,fg=default
