--- a/.tmux.conf
+++ b/.tmux.conf
@@ -184,7 +184,7 @@ bind p paste-buffer
 ### Color & Style Settings ###
 ##############################
 
-source ~/dotfiles/tmux/theme.sh
+# source ~/dotfiles/tmux/theme.sh
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
